--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 <div class="logo">
                                     <a href="index.html">
                                         <!-- <img src="img/logo.png" alt=""> -->
-                                         <h1>Kalai !</h1>
+                                         <h1 style="color: white;">Kalaivani !</h1>
                                     </a>
                                 </div>
                             </div>
